# tokengochi

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  skills-lock.json
.claude/: settings.json
.claude/hooks/: remind-code-map.sh
.claude/skills/: asset-canon
.github/: FUNDING.yml
.github/scripts/: merge-updater-manifest.py
.github/workflows/: ci.yml  release.yml
docs/: README.md  agile.md  architecture.md  engineering.md  index.md  product.md
docs/assets/: effects-notes.yaml  effects.yaml  food-banh-mi.yaml  food-default.yaml  food-sushi.yaml  furniture-bed.yaml  furniture-plant.yaml  hat-leaf.yaml  hat-mushroom.yaml  hatchling-gag-expressions.yaml  hatchling.yaml  prop-drink-bottle.yaml  readme-cover-tokengochi.yaml  scarf-sunset.yaml  (+1 more)
docs/tasks/: README.md
src-tauri/: Cargo.toml  build.rs  economy.toml  tauri.conf.json
src-tauri/capabilities/: default.json  overlay.json
src-tauri/icons/: icon.icns
src-tauri/installer/: deb-postrm.sh  windows-hooks.nsh
src-tauri/src/: claude_hooks.rs  codex_hooks.rs  hook_settings.rs  lib.rs  main.rs  overlay_window.rs  storage_paths.rs  tray.rs
src-tauri/src/economy/: config.rs  conversion.rs  fullness.rs  mod.rs  state.rs  xp.rs
src-tauri/src/pet/: mod.rs
src-tauri/src/store/: game_state.rs  ledger.rs  mod.rs
src-tauri/src/watcher/: agent_status.rs  claude_code.rs  codex_cli.rs  manual.rs  mod.rs  openai.rs
src-tauri/src/watcher/fixtures/claude_code/: malformed.jsonl  unknown_fields.jsonl  valid_session.jsonl
src-tauri/src/window_geometry/: mod.rs
tools/: export_tauri_icons.py
(+126 files in other folders)
